syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.telenordigital.prime.ocs";

// OCS Service
service OcsService {
  rpc FetchDataBucket (stream FetchDataBucketInfo) returns (stream FetchDataBucketInfo) {}
  rpc ReturnUnusedData (stream ReturnUnusedDataRequest) returns (stream ReturnUnusedDataResponse) {}
  rpc Activate (ActivateRequest) returns (stream ActivateResponse) {}
}

message FetchDataBucketInfo {
  string msisdn = 1;
  uint64 bytes = 2;
  string requestId = 3;
}

message ReturnUnusedDataRequest {
  string msisdn = 1;
  uint64 bytes = 2;
}

message ReturnUnusedDataResponse {
  string msisdn = 1;
}

message ActivateRequest {
}

message ActivateResponse {
  string msisdn = 1;
}

// This is used only to report to Analytics engine by Prime via Google Cloud Pub/Sub.
// This may be moved to a separate library project, in future.
message DataTrafficInfo {
  string msisdn = 1;
  uint64 bucketBytes = 2;
  uint64 bundleBytes = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message AggregatedDataTrafficInfo {
  string msisdn = 1;
  uint64 dataBytes = 2;
  string dateTime = 3;
}